--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Check the cwd
+        working-directory: ${{ env.working-directory }}
         run: pwd
       - run: npm install
       - run: npm test
