changing some settings in task-def

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
           CI: true
 
   test_backend:
+    needs: test_frontend
     runs-on: ubuntu-latest
     env:
       server-directory: ./server
