--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
-    "start": "cross-env NODE_ENV=production nodemon --exec babel-node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node server.js"
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node server.js",
+    "prod": "cross-env NODE_ENV=production nodemon --exec babel-node server.js"
   },
   "jest": {
     "testEnvironment": "jsdom",
