--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.9"
-  },
-  "devDependencies": {
+    "mongoose": "^5.8.9",
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
@@ -33,5 +31,7 @@
     "nodemon": "^2.0.2",
     "regenerator-runtime": "^0.13.3",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
   }
 }
