--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -70,7 +70,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: ds2020_adrian
+        container-name: web-server
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
