--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -36,6 +36,10 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      server-directory: ./server
+      client-directory: ./client
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -51,6 +55,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Build Client, copy into server
+      run: |
+        npm install
+        npm run-script build
+        working-directory: ${{ env.client-directory }}
+        
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
