--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,11 +55,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build Client, copy into server
-      run: |
-        npm install
-        npm run-script build
-        working-directory: ${{ env.client-directory }}
+    - name: npm install client
+      run: npm install
+      working-directory: ${{ env.client-directory }}
+    - name: Build the client
+      run: npm run-script build
+      working-directory: ${{ env.client-directory }}
         
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
