--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,9 +42,9 @@ jobs:
         with:
           tf_actions_version: 0.12.13
           tf_actions_subcommand: 'plan'
-          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=apardo04"'
+          tf_actions_comment: true
+          args: '-out=plan.tfplan'
         env:
-          TF_CLI_ARGS_plan: '-out=example.tfplan'
           TF_WORKSPACE: Example-Workspace
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_TF }}
