--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,3 +50,24 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_TF }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_TF }}
           TF_VAR_remote_state_token: ${{ secrets.TF_API_TOKEN }}
+                - name: 'Terraform Plan'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: 0.12.21
+          tf_actions_subcommand: 'plan'
+          tf_actions_comment: true
+          args: '-out=plan.tfplan'
+        env:
+          TF_WORKSPACE: Example-Workspace
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_TF }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_TF }}
+          TF_VAR_remote_state_token: ${{ secrets.TF_API_TOKEN }}
+      - name: 'Terraform Apply'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: 0.12.21
+          tf_actions_subcommand: 'apply'
+          args: 'plan.tfplan'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
