--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,7 +43,7 @@ jobs:
           tf_actions_version: 0.12.21
           tf_actions_subcommand: 'plan'
           tf_actions_comment: true
-          args: '-out=plan.tfplan'
+          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=apardo04" -out=plan.tfplan'
         env:
           TF_WORKSPACE: Example-Workspace
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -55,7 +55,7 @@ jobs:
         with:
           tf_actions_version: 0.12.21
           tf_actions_subcommand: 'apply'
-          args: 'plan.tfplan'
+          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=apardo04" plan.tfplan'
         env:
           TF_WORKSPACE: Example-Workspace
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
