--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           tf_actions_version: 0.12.21
           tf_actions_subcommand: 'validate'
+          tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_VAR_remote_state_token: ${{ secrets.TF_API_TOKEN }}
@@ -43,7 +44,7 @@ jobs:
           tf_actions_version: 0.12.21
           tf_actions_subcommand: 'plan'
           tf_actions_comment: true
-          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=apardo04" -out=plan.tfplan'
+          args: '-out=plan.tfplan'
         env:
           TF_WORKSPACE: Example-Workspace
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
