--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           tf_actions_version: 0.12.21
           tf_actions_subcommand: 'apply'
-          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=apardo04" plan.tfplan'
+          args: 'plan.tfplan'
         env:
           TF_WORKSPACE: Example-Workspace
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
