--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,7 +5,7 @@ FROM node:alpine
 WORKDIR /usr/app
 
 # Install PM2 globally
-RUN npm install --global pm2
+#RUN npm install --global pm2
 
 # Copy package.json and package-lock.json before other files
 # Utilise Docker cache to save re-installing dependencies if unchanged
@@ -21,11 +21,13 @@ COPY ./ ./
 #RUN npm run build
 
 # Expose the listening port
-EXPOSE 80
+#EXPOSE 80
+EXPOSE 8080
 
 # Run container as non-root (unprivileged) user
 # The node user is provided in the Node.js Alpine base image
 #USER node
 
 # Run npm start script with PM2 when container starts
-CMD [ "pm2-runtime", "npm", "--", "start" ]
+#CMD [ "pm2-runtime", "npm", "--", "start" ]
+CMD [ "npm", "start" ]
